--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,7 +44,7 @@ env:
 
 jobs:
   build:
-    name: Build on ${{matrix.os}}
+    name: Build on ${{matrix.os}} with .NET ${{ matrix.dotnet }}
     runs-on: ${{matrix.os}}
     strategy:
       matrix:
