--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,12 +44,12 @@ env:
 
 jobs:
   build:
-    name: Build on ${{matrix.os}} with .NET ${{ matrix.dotnet }}
+    name: Build on ${{matrix.os}} # with .NET ${{ matrix.dotnet }}
     runs-on: ${{matrix.os}}
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macOS-latest]
-        dotnet: [ '6.0.x', '8.0.x' ]
+        #dotnet: [ '6.0.x', '8.0.x' ]
     
     steps:
     - name: 'Checkout'
@@ -59,7 +59,10 @@ jobs:
     - name: 'Install .NET SDK'
       uses: actions/setup-dotnet@v4
       with:
-          dotnet-version: ${{ matrix.dotnet }}
+        dotnet-version: | 
+          6.0.x
+          8.0.x
+        #dotnet-version: ${{ matrix.dotnet }}
     - name: '.NET Restore'
       run: dotnet tool restore
     - name: 'Build Project'
