--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,6 +54,9 @@ jobs:
     steps:
     - name: 'Checkout'
       uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+        filter: tree:0
     - name: 'Git Fetch Tags'
       run: git fetch --tags
     - name: 'Install .NET SDK'
