--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,9 +56,8 @@ jobs:
       uses: actions/checkout@v4
       with:
         fetch-depth: 0
+        fetch-tags: true
         filter: tree:0
-    - name: 'Git Fetch Tags'
-      run: git fetch --tags
     - name: 'Install .NET SDK'
       uses: actions/setup-dotnet@v4
       with:
