--- a/benchmarks/Paseto.Benchmark/Paseto.Benchmark.csproj
+++ b/benchmarks/Paseto.Benchmark/Paseto.Benchmark.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFrameworks>net6.0;net8.0</TargetFrameworks>
+    <TargetFramework>net10.0</TargetFramework>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\Paseto\Paseto.csproj" />
+    <ProjectReference Include="..\..\tests\Paseto.Tests\Paseto.Tests.csproj" />
   </ItemGroup>
 
 </Project>
