--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,8 +62,8 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: | 
-          6.0.x
           8.0.x
+          10.0.x
         #dotnet-version: ${{ matrix.dotnet }}
     - name: '.NET Restore'
       run: dotnet tool restore
@@ -130,7 +130,7 @@ jobs:
     - name: 'Checkout'
       uses: actions/checkout@v4
     - name: 'Run Benchmarks'
-      run: cd benchmarks/Paseto.Benchmark && dotnet run -f net8.0 -c Release --exporters json --filter '*'
+      run: cd benchmarks/Paseto.Benchmark && dotnet run -c Release --exporters json --filter '*'
     - name: 'Store Benchmark Result'
       uses: rhysd/github-action-benchmark@v1
       with:
